methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: '(' expected but identifier found.
  while fin!=true{
        ^SlugHunting:28: error: illegal start of simple expression
} 
^